Implement MCP SourceKit-LSP server with production-ready improvements
Major features:
- Complete TypeScript implementation of MCP server bridging to SourceKit-LSP
- Five Swift code intelligence tools: hover, definition, references, symbols, diagnostics
- Two resources: project structure and build settings
- Comprehensive test suite with 11 passing tests

Production improvements based on code review:
- Input validation using AJV for all tool arguments
- Async file operations to prevent blocking
- Proper file version tracking with content change detection
- Removed unnecessary polling for diagnostics
- Dynamic tool metadata generation from single source

Documentation:
- Enhanced README with Claude Code installation instructions
- Security documentation for .env usage
- Comprehensive troubleshooting guide
- Development workflow with testing commands

Architecture:
- Proper LSP message framing via vscode-jsonrpc
- Caching layer for diagnostics notifications
- Graceful error handling and process management
- TypeScript strict mode compliance

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ dist/
 .env
 .env.local
 .env.*.local
+# Keep example file
+!.env.example
 
 # IDE
 .vscode/
@@ -26,3 +28,7 @@ coverage/
 
 # TypeScript
 *.tsbuildinfo
+
+# Test files
+test-example.*
+*.test.swift
